fix: fixing semantic and spacing errors

--- a/styles/header.css
+++ b/styles/header.css
@@ -16,8 +16,9 @@
   justify-self: end;
 }
 
-#secundary {
+#secondary {
   padding-block: 14px;
   border: solid 1px var(--stroke-color);
   border-inline: none;
+  justify-content: space-between;
 }
